# seer-taskrunner

./: .cnb.yml  .dir-locals.el  .gitignore  .gitmodules  Additional-Terms.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  ReadMe.md  task.json
contrib/: sync2cnb.bash
examples/: task1.json  task2.json
include/: TaskRunner.hpp  generator  taskgo.hpp
include/nlohmann/: json.hpp
src/: Runner.cpp  Runner.h  Task.cpp  Task.h  main.cpp
